# offer_bid_opt

./: .gitignore  CHALLENGE.md  README.md  pyproject.toml  sample_data_generator.py
data/: energy_market_samples.npz  energy_market_samples_large.npz
offer_bid_opt/: bidding_model.py  bidding_optimizer.py  constants.py  postprocess.py  price.py  sample_data_generator.py  utility.py  visualize.py
script/: run_optimal_prices.py  run_strategies.py  run_strategies_limit_quantity.py
test/: test_bidding_optimizer.py  test_price.py  test_utility.py
